--- a/static/RAK.html
+++ b/static/RAK.html
@@ -3,8 +3,10 @@
         <title>Welcome to RAK</title>
         <script src="js/libs/jquery-3.1.0.min.js"></script>
         <script src="js/libs/sprintf.js"></script>
+        <script src="js/libs/dat.gui.js"></script>
         <script src="js/CanvasTool.js"></script>
         <script src="js/RAK.js"></script>
+
     </head>
     <body>
         <h1>Welcome to RAK</h1>
