added interaction class

--- a/static/RAK.html
+++ b/static/RAK.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>Welcome to RAK</h1>
+        <div id="stats"></div>
         <canvas id="canvas1" width=600 height=600></canvas>
 
         <script>
