now use CanvasTool from WorldViews/CanvasTool

--- a/static/RAK.html
+++ b/static/RAK.html
@@ -4,7 +4,7 @@
         <script src="js/libs/jquery-3.1.0.min.js"></script>
         <script src="js/libs/sprintf.js"></script>
         <script src="js/libs/dat.gui.js"></script>
-        <script src="js/CanvasTool.js"></script>
+        <script src="CanvasTool/js/CanvasTool.js"></script>
         <script src="js/RAK.js"></script>
 
     </head>
@@ -12,7 +12,7 @@
         <h1>Welcome to RAK</h1>
         <div id="stats"></div>
         <canvas id="canvas1" width=600 height=600></canvas>
-
+        <div id="canvasStat"></div>
         <script>
             var rak = null;
 
